--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,10 @@
     box-shadow: 0px 0px 24px 4px #000000;
 }
 
+i{
+    cursor: pointer;
+}
+
 aside{
     background-color: #FFFFFF;
     width: calc(100% / 3);
@@ -147,18 +151,44 @@ main{
 .sent .message-object{
     background-color: #D5F9BA;
     border-radius: 7px;
-    max-width: 50%;
+    max-width: 80%;
     padding: 7px;
 }
 
 .received .message-object{
     background-color: #FFFFFF;
     border-radius: 7px;
-    max-width: 50%;
+    max-width: 80%;
     padding: 7px;
 }
 
 .time{
     font-size: small;
     text-align: end;
+}
+
+.myButton{
+    background-color: rgba(0, 0, 0, 0.1);
+    border-radius: 50%;
+    color: white;
+}
+
+.chevron-1{
+    opacity: 0;
+    padding-top: 16px;
+    margin-right: 10px;
+}
+
+.chevron-2{
+    opacity: 0;
+    padding-top: 16px;
+    margin-left: 10px;
+}
+
+.sent:hover .chevron-1{
+    opacity: 1;
+}
+
+.received:hover .chevron-2{
+    opacity: 1;
 }
